compilers/ID/cool/regression/BASE_cgtest/old_cool/redef_user.cl.stderr
./BASE_cgtest/redef_user.cl:3: Class MyClass was previously defined.
Compilation halted due to static semantic errors.
