compilers/ID/cool/regression/BASE_cgtest/old_cool/redef_user.cl
Class MyClass is end;

Class MyClass is end;
